--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,40 +13,60 @@
       </svg>
     </button>
     <ul class="header-nav-list">
-      <li class="header-nav-item"><a  href="/src/index.html">Home</a></li>
-      <li class="header-nav-item"><a  href="#books">Books</a></li>
-      <li class="header-nav-item"><a  href="#feedbacks">Feedbacks</a></li>
-      <li class="header-nav-item"><a  href="#events">Events</a></li>
-      <li class="header-nav-item"><a  href="#location">Location</a></li>
+      <li class="header-nav-item"><a href="/src/index.html">Home</a></li>
+      <li class="header-nav-item"><a href="#books">Books</a></li>
+      <li class="header-nav-item"><a href="#feedbacks">Feedbacks</a></li>
+      <li class="header-nav-item"><a href="#events">Events</a></li>
+      <li class="header-nav-item"><a href="#location">Location</a></li>
     </ul>
-    <div class="nav-modal" id="navModal" >
+    <div class="nav-modal" id="navModal">
       <nav>
         
         <div class="logo-menu-nav-conteiner">
-        <a class="logo-header-menu-nav" href="/src/index.html">
-          <img
-            class="img-logo-header"
-            src="/img/footer/logo-footer.svg"
-            alt="logo"
-          />
-        </a> 
-        <button class="close-btn" id="closeMenu"  type="button" data-modal-open>
-          <svg width="48" height="48">
-            <use href="/img/symbol-defs.svg#icon-x"></use>
-          </svg>
-        </button>
-      </div>
-<div class="nav-modal-list-conteiner">
-             <ul class="nav-list">
-          <li class="nav-modal-item"><a  href="/src/index.html" data-link="/src/index.html">Home</a></li>
-          <li class="nav-modal-item"><a href="#" data-link="/src/partials/books.html#books">Books</a></li>
-          <li class="nav-modal-item"><a  href="#" data-link="/src/partials/feedbacks.html#feedbacks">Feedbacks</a></li>
-          <li class="nav-modal-item"><a  href="#" data-link="/src/partials/events.html#events">Events</a></li>
-          <li class="nav-modal-item"><a  href="#" data-link="/src/partials/location.html#location">Contact</a></li>
-        </ul>
-      </div>
-   
+          <a class="logo-header-menu-nav" href="/src/index.html">
+            <img
+              class="img-logo-header"
+              src="/img/footer/logo-footer.svg"
+              alt="logo"
+            />
+          </a>
+          <button
+            class="close-btn"
+            id="closeMenu"
+            type="button"
+            data-modal-open
+          >
+            <svg width="48" height="48">
+              <use href="/img/symbol-defs.svg#icon-x"></use>
+            </svg>
+          </button>
+        </div>
+        <div class="nav-modal-list-conteiner">
+          <ul class="nav-list">
+            <li class="nav-modal-item">
+              <a href="/src/index.html" data-link="/src/index.html">Home</a>
+            </li>
+            <li class="nav-modal-item">
+              <a href="#" data-link="/src/partials/books.html#books">Books</a>
+            </li>
+            <li class="nav-modal-item">
+              <a href="#" data-link="/src/partials/feedbacks.html#feedbacks"
+                >Feedbacks</a
+              >
+            </li>
+            <li class="nav-modal-item">
+              <a href="#" data-link="/src/partials/events.html#events"
+                >Events</a
+              >
+            </li>
+            <li class="nav-modal-item">
+              <a href="#" data-link="/src/partials/location.html#location"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </div>
       </nav>
     </div>
-   
+  </div>
 </header>
