--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,7 +21,6 @@
     </ul>
     <div class="nav-modal" id="navModal">
       <nav>
-        
         <div class="logo-menu-nav-conteiner">
           <a class="logo-header-menu-nav" href="/src/index.html">
             <img
@@ -31,7 +30,7 @@
             />
           </a>
           <button
-            class="close-btn"
+            class="close-btn-burger"
             id="closeMenu"
             type="button"
             data-modal-open
