--- a/src/css/header.css
+++ b/src/css/header.css
@@ -53,7 +53,7 @@ z-index: 1000;
 display: flex;  
 flex-direction: column;   }
 
- .close-btn {
+ .close-btn-burger {
 position: absolute;
 top: 10px;
 right: 12px;
