--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header>
   <div class="container header-container">
-    <a class="logo-header" href="/src/index.html">
+    <a class="logo-header" href="./index.html">
       <img
         class="img-logo-header"
         src="/img/footer/logo-footer.svg"
