--- a/src/css/books.css
+++ b/src/css/books.css
@@ -1,387 +1,358 @@
 .books .container .books-wrapper {
-    position: relative;
+  position: relative;
 }
 
 .books .container .books-wrapper .title {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 .books .container .books-wrapper .button {
-    border: 1px solid #0b0500;
-        border-radius: 4px;
-        padding: 8px 20px;
-        width: 100%;
-        height: 40px;
-        font-family: "Rubik", sans-serif;
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 150%;
-            color: #0b0500;
-            background-color: transparent;
+  border: 1px solid #0b0500;
+  border-radius: 4px;
+  padding: 8px 20px;
+  width: 100%;
+  height: 40px;
+  font-family: 'Rubik', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #0b0500;
+  background-color: transparent;
+  transition: background-color 400ms ease;
 }
 
 .books .container .books-wrapper .button:hover {
-    cursor: pointer;
-    background-color: #e15d05;
-    color: white;
+  cursor: pointer;
+  background-color: #ea8d50;
+  color: white;
 }
 
 .books .container .books-wrapper .button:focus {
-    cursor: pointer;
-    background-color: #e15d05;
-    color: white;
+  cursor: pointer;
+  background-color: #ea8d50;
+  color: white;
 }
 
 .books .container .books-wrapper .list-books {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 .books .container .books-wrapper .list-books.all-books-show {
-    display: flex;
-    justify-content:center;
-    align-items: normal;
-    flex-wrap: wrap;
-    row-gap: 40px;
-    column-gap: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: normal;
+  flex-wrap: wrap;
+
+  row-gap: 40px;
+  column-gap: 24px;
 }
 
-@media screen and (min-width: 1060px) {
-    .books .container .books-wrapper .list-books.all-books-show {
-        justify-content:flex-start;
-    }
-}
 .books .container .books-wrapper .list-books .category-name {
-    display: block;
-    margin-bottom: 18px;
-    color: #B4AFAF;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
+  display: block;
+  margin-bottom: 18px;
+  color: #b4afaf;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
 .books .container .books-wrapper .list-books .subject,
-.books .container .books-wrapper .list-books .price
- {
-    font-family: "Rubik", sans-serif;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 150%;
-    text-transform: capitalize;
-    color: #0b0500;
-
+.books .container .books-wrapper .list-books .price {
+  font-family: 'Rubik', sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 150%;
+  text-transform: capitalize;
+  color: #0b0500;
 }
 
 .books .container .books-wrapper .list-books .author {
-    font-family: "Rubik", sans-serif;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 150%;
-        color: #0b0500;
+  font-family: 'Rubik', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  color: #0b0500;
 }
-
 
 .books .container .books-wrapper .list-books .book-info {
-    position: relative;
-    width: 100%;
-    min-height: 345px;
+  position: relative;
+  width: 100%;
+  min-height: 345px;
 }
-
-
-.books .container .books-wrapper .list-books .book-info:hover {
-    
-    border-radius: 10px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-}
-
-.books .container .books-wrapper .list-books .book-info:focus {
-    
-    border-radius: 10px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-}
-
 
 @media screen and (min-width: 768px) {
-    .books .container .books-wrapper .list-books .book-info {
-        max-width: 218px;
-    }
-}
-
-@media screen and (min-width: 1060px) {
-    .books .container .books-wrapper .list-books .book-info {
-        max-width: 227px;
-    }
+  .books .container .books-wrapper .list-books .book-info {
+    max-width: 218px;
+  }
 }
 
 .books .container .books-wrapper .list-books .book-info .subject {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .books .container .books-wrapper .list-books .book-info .book-cover {
-    position: relative;
-    max-width: 335px;
-    width: 100%;
-    max-height: 485px;
-    min-height: 256px;
-    overflow: hidden;
-    border-radius: 8px;
+  position: relative;
+  max-width: 335px;
+  width: 100%;
+  max-height: 485px;
+  min-height: 256px;
+  overflow: hidden;
+  border-radius: 8px;
 }
 
 .books .container .books-wrapper .list-books .book-info .book-cover img {
-    width: 100%;
+  width: 100%;
 }
 
 @media screen and (min-width: 768px) {
-    .books .container .books-wrapper .list-books .book-info .book-cover {
-        max-width: 227px;
-        max-height: 316px;
-        min-height: 316px;
-    }
-}
-
-@media screen and (min-width: 1060px) {
-    .books .container .books-wrapper .list-books .book-info .book-cover {
-        max-width: 227px;
-        max-height: 316px;
-        min-height: 316px;
-    }
-}
-@media screen and (min-width: 1060px) {
-    .books-list-placeholder{
-        min-width: 1004px;
-    }
+  .books .container .books-wrapper .list-books .book-info .book-cover {
+    max-width: 227px;
+    max-height: 316px;
+    min-height: 316px;
+  }
 }
 
 .book-cover {
-    z-index: 2;
+  z-index: 2;
 }
 
 .categories-books {
-    max-width: 308px;
-    color: rgba(17, 17, 17, 0.6);
-    max-height: 150px;
+  max-width: 308px;
+  color: rgba(17, 17, 17, 0.6);
+  max-height: 150px;
 }
 
-@media screen and (min-width: 768px) {
-    .categories-books {
-        max-width: 768px;
-        display: flex;
-        column-gap: 32px;
-        padding: 40px 32px 100px 32px;
-        margin: 0 auto;
-    }
-}
+/* @media screen and (min-width: 768px) {
+  .categories-books {
+    max-width: 768px;
+    display: flex;
 
-@media screen and (min-width: 1060px) {
-    .categories-books {
-        max-width: 308px;
-        width: 100%;
-        display: block;
-        padding: 0;
-        max-height: 100%;
-    }
-}
-
-@media screen and (min-width: 1060px) {
-    .books .container .books-wrapper {
-        display: flex;
-        max-width: 1440px;
-        margin: 0 auto;
-        column-gap: 24px;
-    }
-}
-
-
+    column-gap: 32px;
+    padding: 40px 32px 100px 32px;
+    margin: 0 auto;
+  }
+} */
 
 .categories-books .container-categories {
-    margin: 0 auto;
-    max-width: 335px;
-    width: 100%;
-    height: 100px;
-    font-size: 16px;
-    letter-spacing: -0.02em;
+  margin: 0 auto;
+  max-width: 335px;
+  width: 100%;
+  height: 100px;
+  font-size: 16px;
+  letter-spacing: -0.02em;
+  max-height: 150px;
+}
+
+/* @media screen and (min-width: 768px) {
+  .categories-books .container-categories {
+    max-width: 337px;
+    height: 472px;
+    font-size: 18px;
+    line-height: 1.33;
     max-height: 150px;
-}
-
-@media screen and (min-width: 768px) {
-    .categories-books .container-categories {
-        max-width: 337px;
-        height: 472px;
-        font-size: 18px;
-        line-height: 1.33;
-        max-height: 150px;
-        
-    }
-}
-
-@media screen and (min-width: 1060px) {
-    .categories-books .container-categories {
-        max-width: 356px;
-        max-height: 100%;
-        height: 100%;
-    }
-}
+  }
+} */
 
 .categories-books .container-categories .categories {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 .categories-books .container-categories .categories .item {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font-family: "Rubik", sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 150%;
-    color: #0b0500;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-family: 'Rubik', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 150%;
+  color: #0b0500;
 }
 
 .categories-books .container-categories .categories .item:hover {
-    cursor: pointer;
-    font-weight: 700;
-    transform: scaleY(1.1);
-    transition: font-weight 250ms linear;
+  cursor: pointer;
+  font-weight: 700;
+  transform: scaleY(1.1);
+  transition: font-weight 250ms linear;
 }
 
 .categories-books .container-categories .categories .item:focus {
-    cursor: pointer;
-    font-weight: 700;
-    transform: scaleY(1.1);
-    transition: font-weight 250ms linear;
+  cursor: pointer;
+  font-weight: 700;
+  transform: scaleY(1.1);
+  transition: font-weight 250ms linear;
 }
 
 .categories-books .container-categories .categories .active {
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #e15d05;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #e15d05;
 }
 
-.categories-books .container-categories .categories .item:first-child~.item {
-    padding-top: 8px;
+.categories-books .container-categories .categories .item:first-child ~ .item {
+  padding-top: 8px;
 }
 
 .load-more {
-    font-family: "Rubik", sans-serif;
-    background-color: #e15d05;
-    color: white;
-    border-radius: 8px;
-    padding: 8px 16px;
-    min-width: 91px;
-    height: 40px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: 0.04em;
-    cursor: pointer;
-    border: none;
-    display: none;
-    margin: 0 auto;
-    margin-top: 10px;
+  font-family: 'Rubik', sans-serif;
+  background-color: #e15d05;
+  color: white;
+  border-radius: 8px;
+  padding: 8px 16px;
+  min-width: 91px;
+  height: 40px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  cursor: pointer;
+  border: none;
+  display: none;
+  margin: 0 auto;
+  margin-top: 10px;
 }
-.books-subtitle-placeholder{
-    display:flex;
-    justify-content: space-between;
+.books-subtitle-placeholder {
+  display: flex;
+  justify-content: space-between;
 }
 .books-subtitle-placeholder h3 {
-    font-family: "Rubik", sans-serif;
-    font-weight: 600;
-        font-size: 20px;
-        line-height: 150%;
-        color: #000;
-        margin-bottom: 24px;
+  font-family: 'Rubik', sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 150%;
+  color: #000;
+  margin-bottom: 24px;
 }
-.books-subtitle-placeholder div{
-    font-family: "Rubik", sans-serif;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 150%;
-        color: #000;
-        margin-right: 10px;
-        margin-top: 7px;
+.books-subtitle-placeholder div {
+  font-family: 'Rubik', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  color: #000;
+  margin-right: 10px;
+  margin-top: 7px;
 }
-.books h2{
-    visibility:hidden;
+.books h2 {
+  visibility: hidden;
 }
-.book-content{
-    display: flex;
-    justify-content: space-between;
-    padding-top: 16px;
+.book-content {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 16px;
 }
 
 .custom-dropdown {
-    position: relative;
-    width: 100%;
-    max-width: 400px;
-    user-select: none;
-    border: 1px solid #baafa7;
-        border-radius: 4px;
-        background-color: #baafa7;
+  position: relative;
+  width: 100%;
+  max-width: 400px;
+  user-select: none;
+  border: 1px solid #baafa7;
+  border-radius: 4px;
+  background-color: #baafa7;
 }
 
 .custom-dropdown .selected {
-    background: #baafa7;
-    padding: 10px;
-    cursor: pointer;
-    border: 1px solid #baafa7;
+  background: #baafa7;
+  padding: 10px;
+  cursor: pointer;
+  border: 1px solid #baafa7;
 }
 
 .custom-dropdown .dropdown-list {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    max-height: 400px;
-    background: #baafa7;
-    border: 1px solid #ccc;
-    border-top: none;
-    overflow-y: auto;
-    display: none;
-    z-index: 10;
-    font-family: "Rubik", sans-serif;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 150%;
-            color: #0b0500;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  max-height: 400px;
+  background: #baafa7;
+
+  border: 1px solid #ccc;
+  border-top: none;
+  overflow-y: auto;
+  display: none;
+  z-index: 9999;
+  font-family: 'Rubik', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  color: #0b0500;
 }
 
 .custom-dropdown .dropdown-list li {
-    padding: 10px;
-    cursor: pointer;
+  padding: 10px;
+  cursor: pointer;
 }
 
 .custom-dropdown .dropdown-list li:hover {
-    background: #e0e0e0;
+  background: #e0e0e0;
 }
 
 /* Кастомный скролл */
 .custom-dropdown .dropdown-list::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
 }
 
 .custom-dropdown .dropdown-list::-webkit-scrollbar-track {
-    background: rgba(11, 5, 0, 0.15);
+  background: rgba(11, 5, 0, 0.15);
 }
 
 .custom-dropdown .dropdown-list::-webkit-scrollbar-thumb {
-    background: #e15d05;
-    border-radius: 4px;
+  background: #e15d05;
+  border-radius: 4px;
 }
 
 .custom-dropdown .dropdown-list::-webkit-scrollbar-thumb:hover {
-    background: #e15d05;
-    border-radius: 4px;
+  background: #e15d05;
+  border-radius: 4px;
 }
 .custom-dropdown .selected::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    width: 0;
-    height: 0;
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    border-top: 6px solid #333;
-    transform: translateY(-50%);
-    pointer-events: none;
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid #333;
+  transform: translateY(-50%);
+  pointer-events: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .list-books {
+    width: calc((100% - 24px));
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .categories-books {
+    max-width: 308px;
+    width: 100%;
+    display: block;
+    padding: 0;
+    max-height: 100%;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .books .container .books-wrapper {
+    display: flex;
+    max-width: 1440px;
+    margin: 0 auto;
+    column-gap: 24px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .books .container .books-wrapper .list-books .book-info .book-cover {
+    max-width: 227px;
+    max-height: 316px;
+    min-height: 316px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .books-list-placeholder {
+    min-width: 1004px;
+  }
 }
