--- a/src/partials/feedbacks.html
+++ b/src/partials/feedbacks.html
@@ -8,9 +8,9 @@
     <!-- Slider main container -->
     <div class="swiper">
       <!-- Additional required wrapper -->
-      <div class="swiper-wrapper">
+      <ul class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide">
+        <li class="swiper-slide">
           <p class="feedback-text">
             Great selection, fast delivery, and beautifully packaged books. My
             go-to store for weekend reads!
@@ -25,8 +25,8 @@
               <p class="feedback-text">Book Lover, Reader</p>
             </div>
           </div>
-        </div>
-        <div class="swiper-slide">
+        </li>
+        <li class="swiper-slide">
           <p class="feedback-text">
             Customer service was super helpful, and my order arrived earlier
             than expected. Highly recommend!
@@ -41,8 +41,8 @@
               <p class="feedback-text">Editor, BookMag</p>
             </div>
           </div>
-        </div>
-        <div class="swiper-slide">
+        </li>
+        <li class="swiper-slide">
           <p class="feedback-text">
             Love the curated picks and clear descriptions. Makes it easy to find
             my next favorite br book.
@@ -60,8 +60,8 @@
               <p class="feedback-text">Author, Novelist</p>
             </div>
           </div>
-        </div>
-        <div class="swiper-slide">
+        </li>
+        <li class="swiper-slide">
           <p class="feedback-text">
             I appreciate how easy it is to browse. The curated books and short
             descriptions save me so much time.
@@ -79,8 +79,8 @@
               <p class="feedback-text">Reader, Enthusiast</p>
             </div>
           </div>
-        </div>
-      </div>
+        </li>
+      </ul>
 
       <div class="feedback-nav-wrapper">
         <div class="my-swiper"></div>
