--- a/src/css/feedbacks.css
+++ b/src/css/feedbacks.css
@@ -42,6 +42,7 @@
 }
 
 .scroll-btn {
+  cursor: pointer;
   flex-shrink: 0;
   width: 48px;
   height: 48px;
@@ -77,7 +78,11 @@
 .my-swiper {
   --swiper-pagination-color: #000;
 }
-
+.swiper-button-disabled {
+  opacity: 0.2;
+  cursor: default;
+  pointer-events: none;
+}
 @media only screen and (min-width: 768px) {
   .swiper-slide {
     /* padding-bottom: 32px; */
