--- a/src/css/location.css
+++ b/src/css/location.css
@@ -90,7 +90,9 @@
   width: 100%;
   overflow: hidden;
 }
-
+iframe {
+  height: 395px;
+}
 /* Адаптивность для планшетов и меньше */
 @media (min-width: 768px) {
   .location-block {
